--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                     data-paddingright="[40,40,40,40]"
                                     data-paddingbottom="[15,15,15,15]"
                                     data-paddingleft="[40,40,40,40]"
-                                    style="z-index: 9; color:#f7bd1f; white-space: nowrap;text-transform:left;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer; font-family: Oswald; letter-spacing: 1px;"></div>
+                                    style="z-index: 9; color:#f7bd1f; white-space: nowrap;text-transform:left;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer; font-family: Oswald; letter-spacing: 1px; border: none;"></div>
                             </li>
                         </ul>
                     </div>
