--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 </head>
 <body>
 
-    <div id="loader-wrapper">
+    <!-- <div id="loader-wrapper">
         <div id="loader"></div>
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
-    </div>
+    </div> -->
 
     <div id="wrapper">
         <div class="sidewrapper sidenav">
